--- a/translations/kangyur/translations/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
+++ b/translations/kangyur/translations/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
@@ -34,7 +34,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -165,6 +165,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-03-01T13:40:09.245Z" type="text-version" status="1.0.0" xml:id="UT22084-094-020-143">
                     <desc>First published version</desc>
+                </change>
+                <change who="#andre" when="2024-03-02T19:11:53.878Z" type="text-version" status="1.0.1" xml:id="UT22084-094-020-144">
+                    <desc>Glossary integration revised, activated in CG</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -596,7 +599,7 @@
                     </p>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-094-020-113">
@@ -632,32 +635,27 @@
                                                 </gloss>
                                         </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-094-020-116">
-                                                  <term type="translationMain">the three junctures
-                                                  of the day</term>
-                                                  <term status="verified" xml:lang="Bo-Ltn" n="1">dus gsum </term>
-                                                  <term xml:lang="bo" n="1">དུས་གསུམ།</term>
-                                                  <term status="verified" xml:lang="Sa-Ltn">triṣkāla</term>
-                                                  <note type="definition">
-                                <p>Morning, noon, and
-                                                  evening.</p>
+                        <gloss xml:id="UT22084-094-020-116" type="term" mode="match">
+                            <term type="translationMain">three junctures of the day</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">triṣkāla</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dus gsum</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">དུས་གསུམ།</term>
+                            <note type="definition">
+                                <p>Morning, noon, and evening.</p>
                             </note>
-                                                </gloss>
+                        </gloss>
                     </item>
                                         <item>
-                                                <gloss xml:id="UT22084-094-020-117" type="term" mode="match">
-                                                  <term type="translationMain">the five sins of
-                                                  immediate retribution</term>
-                                                  <term status="verified" xml:lang="Sa-Ltn">pañcānantarya</term>
-                                                  <term status="verified" xml:lang="Bo-Ltn" n="1">mtshams med pa lnga</term>
-                                                  <term xml:lang="bo" n="1">མཚམས་མེད་པ་ལྔ།</term>
-                                                  <note type="definition">
-                                                  <p>These are killing one’s mother, father, or an
-                                                  arhat; drawing blood from a thus-gone one; or
-                                                  causing a schism in the saṅgha.</p>
-                                                  </note>
-                                                </gloss>
-                                        </item>
+                        <gloss xml:id="UT22084-094-020-117" type="term" mode="match">
+                            <term type="translationMain">five sins of immediate retribution</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">pañcānantarya</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mtshams med pa lnga</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">མཚམས་མེད་པ་ལྔ།</term>
+                            <note type="definition">
+                                <p>These are killing one’s mother, father, or an arhat; drawing blood from a thus-gone one; or causing a schism in the saṅgha.</p>
+                            </note>
+                        </gloss>
+                    </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-094-020-118">
                                                   <term type="translationMain">untimely death</term>
