--- a/translations/kangyur/placeholders/090-023_toh579,935-the_incantation_the_essence_of_the_six_perfections.xml
+++ b/translations/kangyur/placeholders/090-023_toh579,935-the_incantation_the_essence_of_the_six_perfections.xml
@@ -13,13 +13,14 @@
                 <author role="translatorMain" xml:id="UT22084-090-023-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-090-023-2">Paul G. Hackett</author>
                 <editor role="projectEditor" xml:id="UT22084-090-023-13">Rory Lindsay</editor>
+                <editor role="copyEditor" xml:id="UT22084-090-023-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-090-023"/>
                 <date/>
             </publicationStmt>
@@ -85,6 +86,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-22T11:18:57.802Z" type="text-version" status="0.0.9" xml:id="UT22084-090-023-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T11:19:29.775Z" type="text-version" status="0.0.10" xml:id="UT22084-090-023-24">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-04T10:21:01.958Z" type="translation-status" status="2.d" xml:id="UT22084-090-023-25">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-04T10:21:01.958Z" type="text-version" status="0.0.11" xml:id="UT22084-090-023-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
