--- a/translations/kangyur/placeholders/090-024_toh580,936-the_incantation_that_captures_the_six_perfections.xml
+++ b/translations/kangyur/placeholders/090-024_toh580,936-the_incantation_that_captures_the_six_perfections.xml
@@ -13,13 +13,14 @@
                 <author role="translatorMain" xml:id="UT22084-090-024-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-090-024-2">Paul G. Hackett</author>
                 <editor role="projectEditor" xml:id="UT22084-090-024-13">Rory Lindsay</editor>
+                <editor role="copyEditor" xml:id="UT22084-090-024-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-090-024"/>
                 <date/>
             </publicationStmt>
@@ -85,6 +86,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-22T11:19:58.694Z" type="text-version" status="0.0.9" xml:id="UT22084-090-024-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T11:20:31.762Z" type="text-version" status="0.0.10" xml:id="UT22084-090-024-24">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-04T10:22:07.502Z" type="translation-status" status="2.d" xml:id="UT22084-090-024-25">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-04T10:22:07.502Z" type="text-version" status="0.0.11" xml:id="UT22084-090-024-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
