--- a/translations/kangyur/placeholders/090-028_toh584,940-the_incantation_that_captures_the_avatamsaka.xml
+++ b/translations/kangyur/placeholders/090-028_toh584,940-the_incantation_that_captures_the_avatamsaka.xml
@@ -13,13 +13,14 @@
                 <author role="translatorMain" xml:id="UT22084-090-028-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-090-028-2">Paul G. Hackett</author>
                 <editor role="projectEditor" xml:id="UT22084-090-028-13">Rory Lindsay</editor>
+                <editor role="copyEditor" xml:id="UT22084-090-028-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-090-028"/>
                 <date/>
             </publicationStmt>
@@ -85,6 +86,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-22T11:23:04.741Z" type="text-version" status="0.0.9" xml:id="UT22084-090-028-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T11:23:35.823Z" type="text-version" status="0.0.10" xml:id="UT22084-090-028-24">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-04T10:25:13.699Z" type="translation-status" status="2.d" xml:id="UT22084-090-028-25">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-04T10:25:13.699Z" type="text-version" status="0.0.11" xml:id="UT22084-090-028-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
