--- a/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
+++ b/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
@@ -40,7 +40,7 @@
                 <editor role="projectEditor" xml:id="UT22084-063-001-8135">John Canti</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.3.10 <date>2024</date>
+                <edition>v 1.4.1 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -320,6 +320,9 @@
                 </change>
                 <change who="#john" when="2024-02-29T12:13:08.873Z" type="text-version" status="1.3.10" xml:id="UT22084-063-001-8212">
                     <desc>No edits but to resolve duplicated version numbering.</desc>
+                </change>
+                <change who="#john" when="2024-03-04T10:47:45.908Z" type="text-version" status="1.4.1" xml:id="UT22084-063-001-8213">
+                    <desc>Three new glossary entries suggested by Konchog.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -8033,6 +8036,36 @@
                                         </gloss>
                     </item>
                                         <item>
+                        <gloss type="term" xml:id="UT22084-063-001-1719">
+                                                <term type="translationMain">descendant of Manu</term>
+                                                <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">manuja</term>
+                                                <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">shed las skyes</term>
+                                                <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཤེད་ལས་སྐྱེས།</term>
+                                                <note type="definition">
+                                                        <p>Manu being the archetypal human, the progenitor of mankind, in 
+                                                                the <title xml:lang="Sa-Ltn">Mahā­bhārata</title>, the Purāṇas, and other Indian 
+                                                                texts, “descendant of Manu” 
+                                                                is a synonym of “human being” or mankind in general. See also “child of Manu.”
+                                                        </p>
+                                                </note>
+                                        </gloss>
+                    </item>
+                                        <item>
+                        <gloss type="term" xml:id="UT22084-063-001-1720">
+                                                <term type="translationMain">child of Manu</term>
+                                                <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">mānava</term>
+                                                <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">shed bu</term>
+                                                <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཤེད་བུ།</term>
+                                                <note type="definition">
+                                                        <p>Manu being the archetypal human, the progenitor of mankind, in 
+                                                                the <title xml:lang="Sa-Ltn">Mahā­bhārata</title>, the Purāṇas, and other Indian 
+                                                                texts, “child of Manu” 
+                                                                is a synonym of “human being” or mankind in general. See also “descendant of Manu.”
+                                                        </p>
+                                                </note>
+                                        </gloss>
+                    </item>
+                                        <item>
                         <gloss xml:id="UT22084-063-001-718" type="person" mode="match">
                             <term type="translationMain">Ānanda</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">ānanda</term>
@@ -8658,18 +8691,30 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-063-001-769">
+                        <gloss xml:id="UT22084-063-001-769" type="person" mode="match">
                             <term type="translationMain">Great Elephant</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">Glang po chen po</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">glang po chen po</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">གླང་པོ་ཆེན་པོ།</term>
                             <note type="definition">
-                                <p>An epithet of the
-                                                  Buddha.</p>
+                                <p>An epithet of the Buddha.</p>
                             </note>
                         </gloss>
                     </item>
                                         <item>
+                                                <gloss xml:id="UT22084-063-001-1769" type="person" mode="match">
+                                                        <term type="translationMain">Four Great Kings</term>
+                                                        <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">catvāro mahārājāḥ</term>
+                                                        <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal po chen po bzhi</term>
+                                                        <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་པོ་ཆེན་པོ་བཞི།</term>
+                                                        <note type="definition">
+                                                                <p>Four gods who live on the lower slopes (fourth level) of Mount Meru in 
+                                                                        the Heaven of the Four Great Kings and guard the four cardinal 
+                                                                        directions. Each is the leader of a semidivine class of beings 
+                                                                        living in his realm. They are Dhṛtarāṣṭra, Virūḍhaka, Virūpākṣa, and Vaiśravaṇa.</p>
+                                                        </note>
+                                                </gloss>
+                                        </item>
+                    <item>
                         <gloss xml:id="UT22084-063-001-771" type="place" mode="match">
                             <term type="translationMain">Vārāṇasī</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">vārāṇasī</term>
