--- a/translations/tengyur/placeholders/075-017_toh3156-simhanadadharani.xml
+++ b/translations/tengyur/placeholders/075-017_toh3156-simhanadadharani.xml
@@ -13,11 +13,11 @@
                 <editor role="projectEditor" xml:id="UT23703-075-017-16">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT23703-075-017"/>
                 <date/>
             </publicationStmt>
@@ -70,6 +70,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-29T15:59:43.328Z" type="text-version" status="0.0.8" xml:id="UT23703-075-017-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-04T13:45:32.059Z" type="translation-status" status="2.e" xml:id="UT23703-075-017-20">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-04T13:45:32.059Z" type="text-version" status="0.0.9" xml:id="UT23703-075-017-21">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
