--- a/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
+++ b/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
@@ -17,11 +17,11 @@
                 <editor role="projectEditor" xml:id="UT22084-088-015-32">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-088-015"/>
                 <date/>
             </publicationStmt>
@@ -108,6 +108,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-29T14:54:47.565Z" type="text-version" status="0.0.13" xml:id="UT22084-088-015-35">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-04T14:44:11.38Z" type="translation-status" status="2.a" xml:id="UT22084-088-015-36">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-04T14:44:11.38Z" type="text-version" status="0.0.14" xml:id="UT22084-088-015-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
