--- a/translations/kangyur/placeholders/094-009_toh732,992-the_incantation_of_yasovati.xml
+++ b/translations/kangyur/placeholders/094-009_toh732,992-the_incantation_of_yasovati.xml
@@ -14,11 +14,11 @@
                 <editor role="projectEditor" xml:id="UT22084-094-009-13">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-094-009"/>
                 <date/>
             </publicationStmt>
@@ -75,6 +75,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-08T12:32:55.47Z" type="text-version" status="0.0.7" xml:id="UT22084-094-009-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-04T15:08:53.883Z" type="translation-status" status="2.d" xml:id="UT22084-094-009-17">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-04T15:08:53.883Z" type="text-version" status="0.0.8" xml:id="UT22084-094-009-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
