--- a/translations/kangyur/translations/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
+++ b/translations/kangyur/translations/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
@@ -32,7 +32,7 @@
           Jun.</sponsor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.8 <date>2024</date>
+                <edition>v 1.1.1 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -196,6 +196,9 @@
                 </change>
                 <change who="#sameer" when="2024-03-04T07:42:15.583Z" type="text-version" status="1.0.8" xml:id="UT22084-103-004-760">
                     <desc>Included in App v 3.11</desc>
+                </change>
+                <change who="#john" when="2024-03-04T19:40:50.86Z" type="text-version" status="1.1.1" xml:id="UT22084-103-004-1650">
+                    <desc>Edits to 2.2.12 and related glossary entries, and new note, to accord with Intro to Toh 8.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -1659,19 +1662,23 @@
                   <title xml:lang="en">The Essential Sūtra Collection</title> and <title xml:lang="en">The Mönda Dho Collection</title>; and others. </tei:p>
               <tei:milestone unit="chunk" xml:id="UT22084-103-004-258"/>
               <tei:p tid="167">As for <title xml:lang="en">The Perfection of Wisdom in One Hundred
-                  Thousand Lines</title>, it is said that at the time of King Tri Songdetsen there
-                were around six copies such as <title xml:lang="en">The Red Manuscript</title> and
-                  <title xml:lang="en">The Blue Manuscript</title>. Starting with the <title xml:lang="Bo-Ltn">Labum Chenmo</title>—a manuscript edition of <title xml:lang="en">The Perfection of Wisdom in One Hundred Thousand Lines</title>
-                produced during the reign of Tri Desongtsen for the life-spirit of Tri Detsuk—there
-                were textual descendants from those six such as <title xml:lang="en">The Innermost
-                  Collection of Jingyön</title>, <title xml:lang="en">The Chebum of
-                  Tsangma</title>,<tei:note place="end" xml:id="UT22084-103-004-259"> We are reading
-                  this as <foreign xml:lang="Bo-Ltn">gtsang ma’i</foreign> in place of <foreign xml:lang="Bo-Ltn">gtsang mi</foreign> to accord with the known name of this
+                  Thousand Lines</title>, it is said that there
+                were some six versions, which include <title xml:lang="en">The Red Manuscript</title> and
+                  <title xml:lang="en">The Blue Manuscript</title> at the time of Tri Songdetsen, and among others evolving from them  
+                <title xml:lang="Bo-Ltn">The Long Imperial Hundred Thousand</title> during the reign of Tri Desongtsen,  
+                <title xml:lang="Bo-Ltn">Tri Detsuk’s Monochrome Imperial Hundred Thousand</title>, <title xml:lang="en">Jingyön’s Innermost
+                  Hundred Thousand</title>, <title xml:lang="en">Tsangma’s Demarcated Hundred
+                  Thousand</title>,<tei:note place="end" xml:id="UT22084-103-004-259"> We are reading
+                  this as <foreign xml:lang="Bo-Ltn">gtsang ma’i</foreign> in place of <foreign xml:lang="Bo-Ltn">gtsang mi</foreign> 
+                    to accord with the known name of this
                   individual.</tei:note>
-                <title xml:lang="en">Ralpachen’s Collection of Six</title>, <title xml:lang="en">The
-                  Red Visage of Namdé Lha</title>, <title xml:lang="en">The Yellow Scrolls of
-                  Darma</title>, as well as nineteen copies of <title xml:lang="en">The Perfection
-                  of Wisdom in One Hundred Thousand Lines</title> assembled by the king’s subjects.
+                <title xml:lang="en">Ralpachen’s Six Volume Hundred Thousand</title>, <title xml:lang="en">Prince Namdé’s 
+                  Red-Faced One</title>, and <title xml:lang="en">Darma’s Yellow-Paper One</title>, as well as nineteen versions of the 
+                <title xml:lang="en">Hundred Thousand Lines</title> produced by the king’s 
+                subjects.<note place="end" xml:id="UT22084-103-004-1258">Situ Panchen provides another more detailed account of these early translations
+                  and manuscripts in Chapter Two on folios 88.b–89.a<ref rend="pending" target="read.84000.co/translation/toh4568-2.html"/>; 
+                  and for yet more detail drawn from a variety of sources see the introduction to <title xml:lang="en">The Perfection of Wisdom in One Hundred
+                    Thousand Lines</title>, <ptr target="#UT22084-014-001-10906">i.23–35</ptr>.</note>
                 A great many collections descended from those without being degraded or corrupted in
                 the intervening years. These source texts were compared and proofread by many
                 scholars such as Üpa Losal, Lotsawa Sönam Öser, Gyangro Jangchup Bum, and
@@ -6287,84 +6294,106 @@
               <term type="translationAlternative">The Blue Manuscript</term>
               <term type="translationAlternative">The Red Manuscript</term>
               <tei:note type="definition">
-                                <tei:p>Two early manuscript editions of the prajñāpāramitā sūtras
-                  that were said to have been written in blue and red ink respectively.</tei:p>
+                                <tei:p>Two early manuscript translations of 
+                <title xml:lang="en">The Perfection of Wisdom in One Hundred Thousand Lines</title>
+                  that were said to have been written in blue and red ink respectively; the red ink (the earliest) is said to have been made using the king’s blood,
+                  and the blue using his singed hair.</tei:p>
                             </tei:note>
             </gloss>
                     </item>
           <item>
                         <gloss type="text" xml:id="UT22084-103-004-649">
-              <term type="translationMain">Labum Chenmo </term>
-              <term status="verified" xml:lang="Bo-Ltn" n="1">khri gtsug gi bla ’bum skya bo</term>
-              <term xml:lang="bo" n="1">ཁྲི་གཙུག་གི་བླ་འབུམ་སྐྱ་བོ།</term>
+            <term type="translationMain">The Long Imperial Hundred Thousand</term>
+              <term status="verified" xml:lang="Bo-Ltn" n="1">bla ’bum chen mo</term>
+              <term xml:lang="bo" n="1">བླ་འབུམ་ཆེན་མོ།</term>
               <term status="verified" xml:lang="Sa-Ltn"/>
-              <tei:note type="definition">
-                                <tei:p>A prajñāpāramitā collection that is no longer extant but
-                  appears to have been created as a memorial for King Tri Detsuk.</tei:p>
+            <tei:note type="definition">
+                                <tei:p>The longest of the early manuscript translations of 
+              <title xml:lang="en">The Perfection of Wisdom in One Hundred Thousand Lines</title>,
+                  created for King Tri Desongtsen.</tei:p>
                             </tei:note>
             </gloss>
                     </item>
           <item>
+                        <gloss type="text" xml:id="UT22084-103-004-1649">
+            <term type="translationMain">Tri Detsuk’s Monochrome Imperial Hundred Thousand</term>
+            <term status="verified" xml:lang="Bo-Ltn" n="1">khri gtsug gi bla ’bum skya bo</term>
+            <term xml:lang="bo" n="1">ཁྲི་གཙུག་གི་བླ་འབུམ་སྐྱ་བོ།</term>
+            <term status="verified" xml:lang="Sa-Ltn"/>
+            <tei:note type="definition">
+                                <tei:p>A manuscript translation of 
+              <title xml:lang="en">The Perfection of Wisdom in One Hundred Thousand Lines</title>
+              created for King Tri Detsuk.</tei:p>
+                            </tei:note>
+          </gloss>
+                    </item>
+          <item>
                         <gloss type="text" xml:id="UT22084-103-004-650">
-              <term type="translationMain">The Innermost Collection of Jingyön</term>
+              <term type="translationMain">Jingyön’s Innermost Hundred Thousand</term>
               <term status="verified" xml:lang="Bo-Ltn" n="1">mjing yon gyi sdug ’bum</term>
               <term xml:lang="bo" n="1">མཇིང་ཡོན་གྱི་སྡུག་འབུམ།</term>
               <term status="verified" xml:lang="Sa-Ltn"/>
-              <tei:note type="definition">
-                                <tei:p>A prajñāpāramitā collection that is no longer extant but
-                  appears to have been named after Senalek Jingyön, the fortieth king of
+            <tei:note type="definition">
+                                <tei:p>A manuscript translation of 
+              <title xml:lang="en">The Perfection of Wisdom in One Hundred Thousand Lines</title>
+                  that appears to have been named after Senalek Jingyön, the fortieth king of
                 Tibet.</tei:p>
                             </tei:note>
             </gloss>
                     </item>
           <item>
                         <gloss type="text" xml:id="UT22084-103-004-651">
-              <term type="translationMain">The Chebum of Tsangma</term>
-              <term status="verified" xml:lang="Bo-Ltn" n="1">gtsang mi’i bye ’bum</term>
-              <term xml:lang="bo" n="1">གཙང་མིའི་བྱེ་འབུམ།</term>
+            <term type="translationMain">Tsangma’s Demarcated Hundred Thousand</term>
+              <term status="verified" xml:lang="Bo-Ltn" n="1">gtsang ma’i bye ’bum</term>
+              <term xml:lang="bo" n="1">གཙང་མའི་བྱེ་འབུམ།</term>
               <term status="verified" xml:lang="Sa-Ltn"/>
-              <tei:note type="definition">
-                                <tei:p>A prajñāpāramitā collection that appears in other sources
-                  with the title <title xml:lang="Bo-Ltn">gtsang ma’i bye ’bum</title>. This
-                  collection is no longer extant, but it may have been named after Prince Tsangma,
-                  the eldest son of King Senalek, who took monastic ordination. </tei:p>
+            <tei:note type="definition">
+                                <tei:p>A manuscript translation of 
+              <title xml:lang="en">The Perfection of Wisdom in One Hundred Thousand Lines</title> that 
+              appears to have been named after Prince Tsangma,
+              the eldest son of King Senalek, who took monastic ordination. The Tibetan <foreign xml:lang="Bo-Ltn">bye</foreign> 
+              in this name, tentatively rendered “demarcated,” could also be understood to mean “sand” or “million.”</tei:p>
                             </tei:note>
             </gloss>
                     </item>
           <item>
                         <gloss type="text" xml:id="UT22084-103-004-652">
-              <term type="translationMain">Ralpachen’s Collection of Six</term>
+            <term type="translationMain">Ralpachen’s Six Volume Hundred Thousand</term>
               <term status="verified" xml:lang="Bo-Ltn" n="1">ral pa can gyi drug ’bum </term>
               <term xml:lang="bo" n="1">རལ་པ་ཅན་གྱི་དྲུག་འབུམ།</term>
               <term status="verified" xml:lang="Sa-Ltn"/>
-              <tei:note type="definition">
-                                <tei:p>A prajñāpāramitā collection that is no longer extant but
-                  appears to have been named after Ralpachen, the forty-first king of
+            <tei:note type="definition">
+                                <tei:p>A manuscript translation of 
+              <title xml:lang="en">The Perfection of Wisdom in One Hundred Thousand Lines</title> that
+              appears to have been named after Ralpachen, the forty-first king of
                 Tibet.</tei:p>
                             </tei:note>
             </gloss>
                     </item>
           <item>
                         <gloss type="text" xml:id="UT22084-103-004-653">
-              <term type="translationMain">The Red Visage of Namdé Lha</term>
+            <term type="translationMain">Prince Namdé’s Red-Faced One</term>
               <term status="verified" xml:lang="Bo-Ltn" n="1">gnam sde lha’i zhal dmar can </term>
               <term xml:lang="bo" n="1">གནམ་སྡེ་ལྷའི་ཞལ་དམར་ཅན།</term>
               <term status="verified" xml:lang="Sa-Ltn"/>
-              <tei:note type="definition">
-                                <tei:p>A prajnāpāramitā collection that is no longer extant but
-                  may have been named after Langdarma’s son, Namdé Ösung (<foreign xml:lang="Bo-Ltn">gnam lde ’od srung</foreign>).</tei:p>
+            <tei:note type="definition">
+                                <tei:p>A manuscript translation of 
+              <title xml:lang="en">The Perfection of Wisdom in One Hundred Thousand Lines</title> that
+              appears to have been named after Langdarma’s son, Namdé Ösung 
+              (<foreign xml:lang="Bo-Ltn">gnam lde ’od srung</foreign>).</tei:p>
                             </tei:note>
             </gloss>
                     </item>
           <item>
                         <gloss type="text" xml:id="UT22084-103-004-654">
-              <term type="translationMain">The Yellow Scrolls of Darma</term>
+            <term type="translationMain">Darma’s Yellow-Paper One</term>
               <term status="verified" xml:lang="Bo-Ltn" n="1">dar ma’i shog ser can</term>
               <term xml:lang="bo" n="1">དར་མའི་ཤོག་སེར་ཅན།</term>
               <term status="verified" xml:lang="Sa-Ltn"/>
-              <tei:note type="definition">
-                                <tei:p>A prajñāpāramitā collection that is no longer extant but
-                  appears to have been named after Langdarma (<foreign xml:lang="Bo-Ltn">glang dar
+            <tei:note type="definition">
+                                <tei:p>A manuscript translation of 
+              <title xml:lang="en">The Perfection of Wisdom in One Hundred Thousand Lines</title> that
+              appears to have been named after Langdarma (<foreign xml:lang="Bo-Ltn">glang dar
                     ma u dum btsan</foreign>), the king of Tibet who succeeded his brother Ralpachen
                   and is traditionally blamed for the decline of Buddhism in Tibet in the late ninth
                   century.</tei:p>
