--- a/translations/kangyur/placeholders/058-005_toh156-the_sutra_of_the_questions_of_the_naga_king_anavatapta.xml
+++ b/translations/kangyur/placeholders/058-005_toh156-the_sutra_of_the_questions_of_the_naga_king_anavatapta.xml
@@ -21,11 +21,11 @@
                 <sponsor xml:id="UT22084-058-005-7">Tian Pujun</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-058-005"/>
                 <date/>
             </publicationStmt>
@@ -92,6 +92,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-27T15:31:24.642Z" type="text-version" status="0.0.12" xml:id="UT22084-058-005-42">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-05T10:48:15.127Z" type="translation-status" status="2.c" xml:id="UT22084-058-005-43">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-05T10:48:15.127Z" type="text-version" status="0.0.13" xml:id="UT22084-058-005-44">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
