--- a/translations/kangyur/placeholders/088-023_toh529,888-the_great_incantation.xml
+++ b/translations/kangyur/placeholders/088-023_toh529,888-the_great_incantation.xml
@@ -4,19 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gzungs chen po/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mahādhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Great Dhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Mahādhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gzungs chen po/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryamahādhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gzungs chen po/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamahādhāraṇī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gzungs chen po/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamahādhāraṇī</title>
+                <author role="translatorMain" xml:id="UT22084-088-023-1"/>
+                <author role="translatorEng" xml:id="UT22084-088-023-2">Gergely Hidas</author>
+                <author role="translatorEng" xml:id="UT22084-088-023-3">Péter-Dániel Szántó</author>
+                <consultant role="projectManager" xml:id="UT22084-088-023-4">Péter-Dániel Szántó</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-088-023"/>
                 <date/>
             </publicationStmt>
@@ -40,9 +43,39 @@
                     <idno source-id="O1JC114941JC12650" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-24T11:16:30.083Z" user="admin">24/07/2023 11:16:30</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:26:05.106Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:26:05.106Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:16:25.828Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T11:16:25.828Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-06-30T11:26:05.106Z" type="translation-status" status="4" xml:id="UT22084-088-023-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-30T11:26:05.106Z" type="text-version" status="0.0.1" xml:id="UT22084-088-023-6">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T11:16:25.828Z" type="translation-status" status="3" xml:id="UT22084-088-023-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T11:16:25.828Z" type="text-version" status="0.0.2" xml:id="UT22084-088-023-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T11:16:56.49Z" type="text-version" status="0.0.3" xml:id="UT22084-088-023-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T11:17:14.305Z" type="text-version" status="0.0.4" xml:id="UT22084-088-023-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T11:21:26.031Z" type="text-version" status="0.0.5" xml:id="UT22084-088-023-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-088-023-12">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-05T11:23:45.524Z" type="translation-status" status="2.h" xml:id="UT22084-088-023-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-05T11:23:45.524Z" type="text-version" status="0.0.7" xml:id="UT22084-088-023-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
