--- a/translations/kangyur/translations/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
+++ b/translations/kangyur/translations/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
@@ -32,7 +32,7 @@
           Jun.</sponsor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.1.1 <date>2024</date>
+                <edition>v 1.1.2 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -199,6 +199,9 @@
                 </change>
                 <change who="#john" when="2024-03-04T19:40:50.86Z" type="text-version" status="1.1.1" xml:id="UT22084-103-004-1650">
                     <desc>Edits to 2.2.12 and related glossary entries, and new note, to accord with Intro to Toh 8.</desc>
+                </change>
+                <change who="#john" when="2024-03-05T11:47:53.159Z" type="text-version" status="1.1.2" xml:id="UT22084-103-004-1651">
+                    <desc>Edits to two MS monikers in 2.2.12 and glossary.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -1673,7 +1676,7 @@
                     to accord with the known name of this
                   individual.</tei:note>
                 <title xml:lang="en">Ralpachen’s Six Volume Hundred Thousand</title>, <title xml:lang="en">Prince Namdé’s 
-                  Red-Faced One</title>, and <title xml:lang="en">Darma’s Yellow-Paper One</title>, as well as nineteen versions of the 
+                  Red-Faced Version</title>, and <title xml:lang="en">Darma’s Yellow-Paper Version</title>, as well as nineteen versions of the 
                 <title xml:lang="en">Hundred Thousand Lines</title> produced by the king’s 
                 subjects.<note place="end" xml:id="UT22084-103-004-1258">Situ Panchen provides another more detailed account of these early translations
                   and manuscripts in Chapter Two on folios 88.b–89.a<ref rend="pending" target="read.84000.co/translation/toh4568-2.html"/>; 
@@ -6372,7 +6375,7 @@
                     </item>
           <item>
                         <gloss type="text" xml:id="UT22084-103-004-653">
-            <term type="translationMain">Prince Namdé’s Red-Faced One</term>
+            <term type="translationMain">Prince Namdé’s Red-Faced Version</term>
               <term status="verified" xml:lang="Bo-Ltn" n="1">gnam sde lha’i zhal dmar can </term>
               <term xml:lang="bo" n="1">གནམ་སྡེ་ལྷའི་ཞལ་དམར་ཅན།</term>
               <term status="verified" xml:lang="Sa-Ltn"/>
@@ -6386,7 +6389,7 @@
                     </item>
           <item>
                         <gloss type="text" xml:id="UT22084-103-004-654">
-            <term type="translationMain">Darma’s Yellow-Paper One</term>
+            <term type="translationMain">Darma’s Yellow-Paper Version</term>
               <term status="verified" xml:lang="Bo-Ltn" n="1">dar ma’i shog ser can</term>
               <term xml:lang="bo" n="1">དར་མའི་ཤོག་སེར་ཅན།</term>
               <term status="verified" xml:lang="Sa-Ltn"/>
