--- a/translations/kangyur/placeholders/058-005_toh156-the_sutra_of_the_questions_of_the_naga_king_anavatapta.xml
+++ b/translations/kangyur/placeholders/058-005_toh156-the_sutra_of_the_questions_of_the_naga_king_anavatapta.xml
@@ -21,11 +21,11 @@
                 <sponsor xml:id="UT22084-058-005-7">Tian Pujun</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-058-005"/>
                 <date/>
             </publicationStmt>
@@ -98,6 +98,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-05T10:48:15.127Z" type="text-version" status="0.0.13" xml:id="UT22084-058-005-44">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-06T11:33:23.822Z" type="translation-status" status="2.b" xml:id="UT22084-058-005-45">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-06T11:33:23.822Z" type="text-version" status="0.0.14" xml:id="UT22084-058-005-46">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
