--- a/translations/kangyur/placeholders/072-027_toh327-sutra_of_the_true_person.xml
+++ b/translations/kangyur/placeholders/072-027_toh327-sutra_of_the_true_person.xml
@@ -5,26 +5,28 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">Sūtra of the True Person</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">satpuruṣasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Satpuruṣasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">skyes bu dam pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasatpuruṣasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasatpuruṣasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa skyes bu dam pa'i mdo</title>
-                <author role="translatorMain" ref="eft:team-80"/>
-                <consultant role="projectManager" ref="eft:person-398">Artur Przybysławski</consultant>
-                <author role="translatorEng" ref="eft:person-398">Artur Przybysławski</author>
-                <author role="translatorEng" ref="eft:person-399">Ācārya Choying Tendar</author>
-                <author role="translatorEng" ref="eft:person-400">Paul Partington</author>
-                <editor role="reviser" ref="eft:person-398">Artur Przybysławski</editor>
-                <editor role="reviser" ref="eft:person-400">Paul Partington</editor>
-                <editor role="proofreader" ref="eft:person-398">Artur Przybysławski</editor>
-                <author role="translatorEng" ref="eft:person-401">Phusar Penpa Dhondup</author>
-                <editor role="proofreader" ref="eft:person-400">Paul Partington</editor>
+                <author role="translatorMain" xml:id="UT22084-072-027-1">Kagyu Translation Project Group</author>
+                <consultant role="projectManager" xml:id="UT22084-072-027-2">Artur Przybysławski</consultant>
+                <author role="translatorEng" xml:id="UT22084-072-027-3">Artur Przybysławski</author>
+                <author role="translatorEng" xml:id="UT22084-072-027-4">Ācārya Choying Tendar</author>
+                <author role="translatorEng" xml:id="UT22084-072-027-5">Paul Partington</author>
+                <editor role="reviser" xml:id="UT22084-072-027-6">Artur Przybysławski</editor>
+                <editor role="reviser" xml:id="UT22084-072-027-7">Paul Partington</editor>
+                <editor role="proofreader" xml:id="UT22084-072-027-8">Artur Przybysławski</editor>
+                <author role="translatorEng" xml:id="UT22084-072-027-9">Phusar Penpa Dhondup</author>
+                <editor role="proofreader" xml:id="UT22084-072-027-10">Paul Partington</editor>
+                <editor role="projectEditor" xml:id="UT22084-072-027-11">Andreas Doctor</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2020</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-072-027"/>
                 <date/>
             </publicationStmt>
@@ -39,13 +41,72 @@
                     <idno source-id="O1JC114941JC12005" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-23T14:30:26.982Z" user="admin">23/03/2023 14:30:26</note>
-    <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:50:43.895Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:50:43.895Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="" date-time="2020-11-30T10:12:31.441Z" user="line-tofte"/>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T10:12:31.441Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="4" date-time="2022-02-22T13:54:49.084Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-02-22T13:54:49.084Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-18T12:41:04.759Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-18T12:41:04.759Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-18T12:41:37.051Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-05-18T12:43:58.22Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-18T12:46:00.107Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-05-18T12:46:55.579Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-09-26T11:59:03.253Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-09-26T11:59:03.253Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-23T14:30:22.768Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2023-03-23T14:30:22.768Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-10-02T13:50:43.895Z" type="translation-status" status="4" xml:id="UT22084-072-027-12">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-02T13:50:43.895Z" type="text-version" status="0.0.1" xml:id="UT22084-072-027-13">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-30T10:12:31.441Z" type="translation-status" status="" xml:id="UT22084-072-027-14">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2020-11-30T10:12:31.441Z" type="text-version" status="0.0.2" xml:id="UT22084-072-027-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-02-22T13:54:49.084Z" type="translation-status" status="4" xml:id="UT22084-072-027-16">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2022-02-22T13:54:49.084Z" type="text-version" status="0.0.3" xml:id="UT22084-072-027-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-18T12:41:04.759Z" type="translation-status" status="3" xml:id="UT22084-072-027-18">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-18T12:41:04.759Z" type="text-version" status="0.0.4" xml:id="UT22084-072-027-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-18T12:41:37.051Z" type="text-version" status="0.0.5" xml:id="UT22084-072-027-20">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-18T12:43:58.22Z" type="text-version" status="0.0.6" xml:id="UT22084-072-027-21">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-18T12:46:00.107Z" type="text-version" status="0.0.7" xml:id="UT22084-072-027-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-18T12:46:55.579Z" type="text-version" status="0.0.8" xml:id="UT22084-072-027-23">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-26T11:59:03.253Z" type="translation-status" status="2.h" xml:id="UT22084-072-027-24">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-26T11:59:03.253Z" type="text-version" status="0.0.9" xml:id="UT22084-072-027-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-23T14:30:22.768Z" type="translation-status" status="2.g" xml:id="UT22084-072-027-26">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-23T14:30:22.768Z" type="text-version" status="0.0.10" xml:id="UT22084-072-027-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-23T14:30:55.913Z" type="text-version" status="0.0.11" xml:id="UT22084-072-027-28">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.12" xml:id="UT22084-072-027-29">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-26T16:19:27.859Z" type="text-version" status="0.0.13" xml:id="UT22084-072-027-30">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-07T10:19:41.57Z" type="translation-status" status="2.f" xml:id="UT22084-072-027-31">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-07T10:19:41.57Z" type="text-version" status="0.0.14" xml:id="UT22084-072-027-32">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
